--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.23",
     "core-js": "^2.4.1",
+    "cropperjs": "^1.0.0-rc.1",
     "ng2-ui-auth": "^6.1.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
